<resources>
    <string name="app_name">My Resume</string>
    <string name="jobs_will_upload_soon_still_studying">Jobs will upload soon Still studying!!!</string>
    <string name="india">India</string>
    <string name="downloader_Web_hunting_data_collector_of_computer_knowledge_part_time">Downloader/Web Hunting/Data
        Collector of Computer Knowledge(Part Time)/Biginner App Devloper
    </string>
    <string name="parul_institute_of_engineering">Parul Institute of Engineering</string>
    <string name="student">Student</string>
</resources>
